--- a/backend/AttendanceAPI/appsettings.json
+++ b/backend/AttendanceAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=attendance.postgres.database.azure.com;Port=5432;Database=AttendanceDB;Username=AttendanceDB;Password=Admin@123;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=AttendanceDB;Username=postgres;Password=postgres"
   },
   "JwtSettings": {
     "SecretKey": "your-super-secret-key-change-this-in-production-minimum-32-characters",
