Fix: Change Azure region from centraleurope to westeurope
- centraleurope is not a valid Azure region name
- Changed default location to westeurope (Netherlands/Amsterdam)
- Updated all workflow files and documentation
- Added AZURE_REGIONS_REFERENCE.md for valid region names
- westeurope provides excellent EU connectivity and GDPR compliance

--- a/.github/workflows/azure-infrastructure.yml
+++ b/.github/workflows/azure-infrastructure.yml
@@ -10,12 +10,14 @@ on:
       location:
         description: 'Azure Region'
         required: true
-        default: 'centraleurope'
+        default: 'westeurope'
         type: choice
         options:
-          - centraleurope
           - westeurope
           - northeurope
+          - germanywestcentral
+          - francecentral
+          - uksouth
           - eastus
           - westus2
 
