Fix: Correct Linux runtime format for .NET 8
- Changed DOTNET:8.0 to DOTNETCORE:8.0 (correct format for Linux App Service)
- This is the proper runtime identifier for .NET 8 on Linux Azure App Service
- Resolves 'Linux Runtime is not supported' error

--- a/.github/workflows/azure-infrastructure.yml
+++ b/.github/workflows/azure-infrastructure.yml
@@ -157,7 +157,7 @@ jobs:
           --name $WEBAPP_NAME \
           --resource-group ${{ github.event.inputs.resource_group }} \
           --plan vermillion-attendance-plan \
-          --runtime "DOTNET:8.0"
+          --runtime "DOTNETCORE:8.0"
         
         echo "WEBAPP_NAME=$WEBAPP_NAME" >> $GITHUB_ENV
         echo "✅ Web App created: $WEBAPP_NAME"
