--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -8,9 +8,18 @@ on:
       - 'backend/**'
       - '.github/workflows/deploy-backend.yml'
   workflow_dispatch:  # Allow manual trigger
+    inputs:
+      environment:
+        description: 'Environment to deploy (prod, dev, staging)'
+        required: true
+        default: 'prod'
+        type: choice
+        options:
+          - prod
+          - dev
+          - staging
 
 env:
-  AZURE_WEBAPP_NAME: vermillion-api    # Change this to your app name
   AZURE_WEBAPP_PACKAGE_PATH: 'backend/AttendanceAPI'
   DOTNET_VERSION: '8.0.x'
 
@@ -21,6 +30,19 @@ jobs:
     steps:
     - name: 🔄 Checkout code
       uses: actions/checkout@v4
+    
+    - name: 🎯 Determine Environment
+      id: env
+      run: |
+        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          ENV="${{ github.event.inputs.environment }}"
+        else
+          ENV="prod"
+        fi
+        echo "environment=$ENV" >> $GITHUB_OUTPUT
+        echo "webapp_name=vermillion-api-$ENV" >> $GITHUB_OUTPUT
+        echo "📌 Deploying to: $ENV"
+        echo "🚀 App name: vermillion-api-$ENV"
 
     - name: 🔧 Setup .NET
       uses: actions/setup-dotnet@v4
@@ -47,11 +69,12 @@ jobs:
     - name: 🚀 Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        app-name: ${{ steps.env.outputs.webapp_name }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
         package: ${{env.DOTNET_ROOT}}/myapp
 
     - name: ✅ Deployment Complete
       run: |
         echo "✅ Backend deployed successfully!"
-        echo "🌐 URL: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net"
+        echo "🌐 URL: https://${{ steps.env.outputs.webapp_name }}.azurewebsites.net"
+        echo "🎯 Environment: ${{ steps.env.outputs.environment }}"
