--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,6 +8,16 @@ on:
       - 'frontend/**'
       - '.github/workflows/deploy-frontend.yml'
   workflow_dispatch:  # Allow manual trigger
+    inputs:
+      environment:
+        description: 'Environment to deploy (prod, dev, staging)'
+        required: true
+        default: 'prod'
+        type: choice
+        options:
+          - prod
+          - dev
+          - staging
 
 env:
   NODE_VERSION: '20.x'
@@ -19,6 +29,17 @@ jobs:
     steps:
     - name: 🔄 Checkout code
       uses: actions/checkout@v4
+
+    - name: 🎯 Determine Environment
+      id: env
+      run: |
+        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          ENV="${{ github.event.inputs.environment }}"
+        else
+          ENV="prod"
+        fi
+        echo "environment=$ENV" >> $GITHUB_OUTPUT
+        echo "📌 Deploying to: $ENV"
 
     - name: 🔧 Setup Node.js
       uses: actions/setup-node@v4
@@ -40,7 +61,7 @@ jobs:
     - name: 🚀 Deploy to Azure Static Web Apps
       uses: Azure/static-web-apps-deploy@v1
       with:
-        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_PROD }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         action: "upload"
         app_location: "frontend"
@@ -48,4 +69,6 @@ jobs:
         skip_app_build: true
 
     - name: ✅ Deployment Complete
-      run: echo "✅ Frontend deployed successfully!"
+      run: |
+        echo "✅ Frontend deployed successfully!"
+        echo "🎯 Environment: ${{ steps.env.outputs.environment }}"
