--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -46,7 +46,8 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+        # package-lock.json wasn't committed; use package.json as dependency path so cache works
+        cache-dependency-path: frontend/package.json
 
     - name: 📦 Install dependencies
       run: npm ci
