--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -60,15 +60,16 @@ jobs:
       env:
         NODE_OPTIONS: "--max_old_space_size=4096"
 
-    - name: 🚀 Deploy to Azure Static Web Apps
-      uses: Azure/static-web-apps-deploy@v1
-      with:
-        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_PROD }}
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        action: "upload"
-        app_location: "frontend"
-        output_location: "dist/browser"
-        skip_app_build: true
+      - name: 🚀 Deploy to Azure Static Web Apps
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_PROD }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: "upload"
+          # We set skip_app_build: true and point app_location to the built artifact folder
+          # The action will upload the contents of frontend/dist/browser which contains index.html
+          app_location: "frontend/dist/browser"
+          skip_app_build: true
 
     - name: ✅ Deployment Complete
       run: |
