--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -55,7 +55,7 @@ jobs:
       working-directory: frontend
 
     - name: 🏗️ Build Angular app
-      run: npm run build
+      run: npm run build -- --configuration production
       working-directory: frontend
       env:
         NODE_OPTIONS: "--max_old_space_size=4096"
