Fix: Remove PostgreSQL support and revert to SQL Server connection string in configuration

--- a/backend/AttendanceAPI/appsettings.json
+++ b/backend/AttendanceAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=AttendanceDB;Username=postgres;Password=postgres"
+     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;User ID=sqladmin;Password=YourStrong!Pass25;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JwtSettings": {
     "SecretKey": "your-super-secret-key-change-this-in-production-minimum-32-characters",
