Add SQL Server migrations and fix async migration application
- Added SQL Server migrations (InitialCreate) with proper SQL Server types
- Updated .gitignore to track Migrations folder (migrations should be version controlled)
- Changed Database.Migrate() to Database.MigrateAsync() for proper async execution
- Ensures migrations complete before database seeding runs
- Fixes 'Invalid object name Users' error in Azure deployment

--- a/.gitignore
+++ b/.gitignore
@@ -494,7 +494,7 @@ pnpm-lock.yaml
 ####################
 
 # Attendance System specific
-/backend/AttendanceAPI/Migrations/
+# Note: Migrations should be committed to ensure database schema is version controlled
 /backend/AttendanceAPI/Logs/
 /scripts/backup/
 *.backup
